Add dismissible 'alert' errors
