# daemon/restapi/api_types.go
@@ -3,15 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.1-0.20240325090356-a14414f04fdd DO NOT EDIT.
 package restapi
 
-// Error defines model for Error.
-type Error struct {
-	// Code Error code
-	Code int32 `json:"code"`
-
-	// Message Error message
-	Message string `json:"message"`
-}
-
 // Id Primary key identifier
 type Id = int64
 
@@ -23,6 +14,15 @@ type IdObject struct {
 
 // IdObjects defines model for IdObjects.
 type IdObjects = []IdObject
+
+// JSONError defines model for JSONError.
+type JSONError struct {
+	// Code Error code
+	Code int32 `json:"code"`
+
+	// Message Error message
+	Message string `json:"message"`
+}
 
 // Link defines model for Link.
 type Link struct {
@@ -55,6 +55,9 @@ type BookmarkFilter = []string
 // CategoryFilter defines model for CategoryFilter.
 type CategoryFilter = []string
 
+// ErrorMsg defines model for ErrorMsg.
+type ErrorMsg = string
+
 // GroupTypeFilter defines model for GroupTypeFilter.
 type GroupTypeFilter = []string
 
@@ -74,7 +77,13 @@ type TabGroupFilter = []string
 type TagFilter = []string
 
 // UnexpectedError defines model for UnexpectedError.
-type UnexpectedError = Error
+type UnexpectedError = JSONError
+
+// GetHtmlErrorParams defines parameters for GetHtmlError.
+type GetHtmlErrorParams struct {
+	// Err Error message to display as HTML
+	Err *ErrorMsg `form:"err,omitempty" json:"err,omitempty"`
+}
 
 // GetHtmlLinksetParams defines parameters for GetHtmlLinkset.
 type GetHtmlLinksetParams struct {
